versions/0.8.0/_sources/refs/_aws-cdk_aws-codedeploy.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"8KxY/TWJwb5Oze0wFqDs0XmCICrXXPfwoXZ2P01z3b4="}

@aws-cdk/aws-codedeploy
=======================

.. mdinclude:: ./__aws-cdk_aws-codedeploy.README.md

Reference
---------

.. py:module:: @aws-cdk/aws-codedeploy


cloudformation
^^^^^^^^^^^^^^
.. py:module:: @aws-cdk/aws-codedeploy.cloudformation

ApplicationResource
~~~~~~~~~~~~~~~~~~~

.. py:class:: ApplicationResource(parent, name, [properties])

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``ApplicationResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``ApplicationResource``
   :type properties: :py:class:`~@aws-cdk/aws-codedeploy.cloudformation.ApplicationResourceProps` or undefined

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


ApplicationResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ApplicationResourceProps



   .. py:attribute:: applicationName

      ``AWS::CodeDeploy::Application.ApplicationName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-codedeploy-application.html#cfn-codedeploy-application-applicationname


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: computePlatform

      ``AWS::CodeDeploy::Application.ComputePlatform``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-codedeploy-application.html#cfn-codedeploy-application-computeplatform


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


DeploymentConfigResource
~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: DeploymentConfigResource(parent, name, [properties])

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``DeploymentConfigResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``DeploymentConfigResource``
   :type properties: :py:class:`~@aws-cdk/aws-codedeploy.cloudformation.DeploymentConfigResourceProps` or undefined

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*

   .. py:class:: MinimumHealthyHostsProperty



      .. py:attribute:: type

         ``DeploymentConfigResource.MinimumHealthyHostsProperty.Type``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentconfig-minimumhealthyhosts.html#cfn-codedeploy-deploymentconfig-minimumhealthyhosts-type


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: value

         ``DeploymentConfigResource.MinimumHealthyHostsProperty.Value``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentconfig-minimumhealthyhosts.html#cfn-codedeploy-deploymentconfig-minimumhealthyhosts-value


         :type: number or :py:class:`@aws-cdk/cdk.Token`



DeploymentConfigResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: DeploymentConfigResourceProps



   .. py:attribute:: deploymentConfigName

      ``AWS::CodeDeploy::DeploymentConfig.DeploymentConfigName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-codedeploy-deploymentconfig.html#cfn-codedeploy-deploymentconfig-deploymentconfigname


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: minimumHealthyHosts

      ``AWS::CodeDeploy::DeploymentConfig.MinimumHealthyHosts``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-codedeploy-deploymentconfig.html#cfn-codedeploy-deploymentconfig-minimumhealthyhosts


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-codedeploy.cloudformation.DeploymentConfigResource.MinimumHealthyHostsProperty` or undefined


DeploymentGroupResource
~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: DeploymentGroupResource(parent, name, properties)

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``DeploymentGroupResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``DeploymentGroupResource``
   :type properties: :py:class:`~@aws-cdk/aws-codedeploy.cloudformation.DeploymentGroupResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*

   .. py:class:: AlarmConfigurationProperty



      .. py:attribute:: alarms

         ``DeploymentGroupResource.AlarmConfigurationProperty.Alarms``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-alarmconfiguration.html#cfn-codedeploy-deploymentgroup-alarmconfiguration-alarms


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-codedeploy.cloudformation.DeploymentGroupResource.AlarmProperty` or undefined


      .. py:attribute:: enabled

         ``DeploymentGroupResource.AlarmConfigurationProperty.Enabled``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-alarmconfiguration.html#cfn-codedeploy-deploymentgroup-alarmconfiguration-enabled


         :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: ignorePollAlarmFailure

         ``DeploymentGroupResource.AlarmConfigurationProperty.IgnorePollAlarmFailure``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-alarmconfiguration.html#cfn-codedeploy-deploymentgroup-alarmconfiguration-ignorepollalarmfailure


         :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: AlarmProperty



      .. py:attribute:: name

         ``DeploymentGroupResource.AlarmProperty.Name``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-alarm.html#cfn-codedeploy-deploymentgroup-alarm-name


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: AutoRollbackConfigurationProperty



      .. py:attribute:: enabled

         ``DeploymentGroupResource.AutoRollbackConfigurationProperty.Enabled``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-autorollbackconfiguration.html#cfn-codedeploy-deploymentgroup-autorollbackconfiguration-enabled


         :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: events

         ``DeploymentGroupResource.AutoRollbackConfigurationProperty.Events``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-autorollbackconfiguration.html#cfn-codedeploy-deploymentgroup-autorollbackconfiguration-events


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: DeploymentProperty



      .. py:attribute:: description

         ``DeploymentGroupResource.DeploymentProperty.Description``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-deployment.html#cfn-properties-codedeploy-deploymentgroup-deployment-description


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: ignoreApplicationStopFailures

         ``DeploymentGroupResource.DeploymentProperty.IgnoreApplicationStopFailures``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-deployment.html#cfn-properties-codedeploy-deploymentgroup-deployment-ignoreapplicationstopfailures


         :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: revision

         ``DeploymentGroupResource.DeploymentProperty.Revision``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-deployment.html#cfn-properties-codedeploy-deploymentgroup-deployment-revision


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-codedeploy.cloudformation.DeploymentGroupResource.RevisionLocationProperty`


   .. py:class:: DeploymentStyleProperty



      .. py:attribute:: deploymentOption

         ``DeploymentGroupResource.DeploymentStyleProperty.DeploymentOption``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-deploymentstyle.html#cfn-codedeploy-deploymentgroup-deploymentstyle-deploymentoption


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: deploymentType

         ``DeploymentGroupResource.DeploymentStyleProperty.DeploymentType``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-deploymentstyle.html#cfn-codedeploy-deploymentgroup-deploymentstyle-deploymenttype


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: EC2TagFilterProperty



      .. py:attribute:: key

         ``DeploymentGroupResource.EC2TagFilterProperty.Key``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-ec2tagfilters.html#cfn-properties-codedeploy-deploymentgroup-ec2tagfilters-key


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: type

         ``DeploymentGroupResource.EC2TagFilterProperty.Type``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-ec2tagfilters.html#cfn-properties-codedeploy-deploymentgroup-ec2tagfilters-type


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: value

         ``DeploymentGroupResource.EC2TagFilterProperty.Value``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-ec2tagfilters.html#cfn-properties-codedeploy-deploymentgroup-ec2tagfilters-value


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: ELBInfoProperty



      .. py:attribute:: name

         ``DeploymentGroupResource.ELBInfoProperty.Name``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-elbinfo.html#cfn-codedeploy-deploymentgroup-elbinfo-name


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: GitHubLocationProperty



      .. py:attribute:: commitId

         ``DeploymentGroupResource.GitHubLocationProperty.CommitId``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-deployment-revision-githublocation.html#cfn-properties-codedeploy-deploymentgroup-deployment-revision-githublocation-commitid


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: repository

         ``DeploymentGroupResource.GitHubLocationProperty.Repository``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-deployment-revision-githublocation.html#cfn-properties-codedeploy-deploymentgroup-deployment-revision-githublocation-repository


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: LoadBalancerInfoProperty



      .. py:attribute:: elbInfoList

         ``DeploymentGroupResource.LoadBalancerInfoProperty.ElbInfoList``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-loadbalancerinfo.html#cfn-codedeploy-deploymentgroup-loadbalancerinfo-elbinfolist


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-codedeploy.cloudformation.DeploymentGroupResource.ELBInfoProperty` or undefined


      .. py:attribute:: targetGroupInfoList

         ``DeploymentGroupResource.LoadBalancerInfoProperty.TargetGroupInfoList``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-loadbalancerinfo.html#cfn-codedeploy-deploymentgroup-loadbalancerinfo-targetgroupinfolist


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-codedeploy.cloudformation.DeploymentGroupResource.TargetGroupInfoProperty` or undefined


   .. py:class:: RevisionLocationProperty



      .. py:attribute:: gitHubLocation

         ``DeploymentGroupResource.RevisionLocationProperty.GitHubLocation``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-deployment-revision.html#cfn-properties-codedeploy-deploymentgroup-deployment-revision-githublocation


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-codedeploy.cloudformation.DeploymentGroupResource.GitHubLocationProperty` or undefined


      .. py:attribute:: revisionType

         ``DeploymentGroupResource.RevisionLocationProperty.RevisionType``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-deployment-revision.html#cfn-properties-codedeploy-deploymentgroup-deployment-revision-revisiontype


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: s3Location

         ``DeploymentGroupResource.RevisionLocationProperty.S3Location``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-deployment-revision.html#cfn-properties-codedeploy-deploymentgroup-deployment-revision-s3location


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-codedeploy.cloudformation.DeploymentGroupResource.S3LocationProperty` or undefined


   .. py:class:: S3LocationProperty



      .. py:attribute:: bucket

         ``DeploymentGroupResource.S3LocationProperty.Bucket``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-deployment-revision-s3location.html#cfn-properties-codedeploy-deploymentgroup-deployment-revision-s3location-bucket


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: bundleType

         ``DeploymentGroupResource.S3LocationProperty.BundleType``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-deployment-revision-s3location.html#cfn-properties-codedeploy-deploymentgroup-deployment-revision-s3location-bundletype


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: eTag

         ``DeploymentGroupResource.S3LocationProperty.ETag``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-deployment-revision-s3location.html#cfn-properties-codedeploy-deploymentgroup-deployment-revision-s3location-etag


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: key

         ``DeploymentGroupResource.S3LocationProperty.Key``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-deployment-revision-s3location.html#cfn-properties-codedeploy-deploymentgroup-deployment-revision-s3location-key


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: version

         ``DeploymentGroupResource.S3LocationProperty.Version``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-deployment-revision-s3location.html#cfn-properties-codedeploy-deploymentgroup-deployment-revision-s3location-value


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: TagFilterProperty



      .. py:attribute:: key

         ``DeploymentGroupResource.TagFilterProperty.Key``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-onpremisesinstancetagfilters.html#cfn-properties-codedeploy-deploymentgroup-onpremisesinstancetagfilters-key


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: type

         ``DeploymentGroupResource.TagFilterProperty.Type``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-onpremisesinstancetagfilters.html#cfn-properties-codedeploy-deploymentgroup-onpremisesinstancetagfilters-type


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: value

         ``DeploymentGroupResource.TagFilterProperty.Value``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-onpremisesinstancetagfilters.html#cfn-properties-codedeploy-deploymentgroup-onpremisesinstancetagfilters-value


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: TargetGroupInfoProperty



      .. py:attribute:: name

         ``DeploymentGroupResource.TargetGroupInfoProperty.Name``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-targetgroupinfo.html#cfn-codedeploy-deploymentgroup-targetgroupinfo-name


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: TriggerConfigProperty



      .. py:attribute:: triggerEvents

         ``DeploymentGroupResource.TriggerConfigProperty.TriggerEvents``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-triggerconfig.html#cfn-codedeploy-deploymentgroup-triggerconfig-triggerevents


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: triggerName

         ``DeploymentGroupResource.TriggerConfigProperty.TriggerName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-triggerconfig.html#cfn-codedeploy-deploymentgroup-triggerconfig-triggername


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: triggerTargetArn

         ``DeploymentGroupResource.TriggerConfigProperty.TriggerTargetArn``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-triggerconfig.html#cfn-codedeploy-deploymentgroup-triggerconfig-triggertargetarn


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined



DeploymentGroupResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: DeploymentGroupResourceProps



   .. py:attribute:: applicationName

      ``AWS::CodeDeploy::DeploymentGroup.ApplicationName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-codedeploy-deploymentgroup.html#cfn-codedeploy-deploymentgroup-applicationname


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: serviceRoleArn

      ``AWS::CodeDeploy::DeploymentGroup.ServiceRoleArn``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-codedeploy-deploymentgroup.html#cfn-codedeploy-deploymentgroup-servicerolearn


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: alarmConfiguration

      ``AWS::CodeDeploy::DeploymentGroup.AlarmConfiguration``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-codedeploy-deploymentgroup.html#cfn-codedeploy-deploymentgroup-alarmconfiguration


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-codedeploy.cloudformation.DeploymentGroupResource.AlarmConfigurationProperty` or undefined


   .. py:attribute:: autoRollbackConfiguration

      ``AWS::CodeDeploy::DeploymentGroup.AutoRollbackConfiguration``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-codedeploy-deploymentgroup.html#cfn-codedeploy-deploymentgroup-autorollbackconfiguration


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-codedeploy.cloudformation.DeploymentGroupResource.AutoRollbackConfigurationProperty` or undefined


   .. py:attribute:: autoScalingGroups

      ``AWS::CodeDeploy::DeploymentGroup.AutoScalingGroups``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-codedeploy-deploymentgroup.html#cfn-codedeploy-deploymentgroup-autoscalinggroups


      :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: deployment

      ``AWS::CodeDeploy::DeploymentGroup.Deployment``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-codedeploy-deploymentgroup.html#cfn-codedeploy-deploymentgroup-deployment


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-codedeploy.cloudformation.DeploymentGroupResource.DeploymentProperty` or undefined


   .. py:attribute:: deploymentConfigName

      ``AWS::CodeDeploy::DeploymentGroup.DeploymentConfigName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-codedeploy-deploymentgroup.html#cfn-codedeploy-deploymentgroup-deploymentconfigname


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: deploymentGroupName

      ``AWS::CodeDeploy::DeploymentGroup.DeploymentGroupName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-codedeploy-deploymentgroup.html#cfn-codedeploy-deploymentgroup-deploymentgroupname


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: deploymentStyle

      ``AWS::CodeDeploy::DeploymentGroup.DeploymentStyle``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-codedeploy-deploymentgroup.html#cfn-codedeploy-deploymentgroup-deploymentstyle


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-codedeploy.cloudformation.DeploymentGroupResource.DeploymentStyleProperty` or undefined


   .. py:attribute:: ec2TagFilters

      ``AWS::CodeDeploy::DeploymentGroup.Ec2TagFilters``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-codedeploy-deploymentgroup.html#cfn-codedeploy-deploymentgroup-ec2tagfilters


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-codedeploy.cloudformation.DeploymentGroupResource.EC2TagFilterProperty` or undefined


   .. py:attribute:: loadBalancerInfo

      ``AWS::CodeDeploy::DeploymentGroup.LoadBalancerInfo``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-codedeploy-deploymentgroup.html#cfn-codedeploy-deploymentgroup-loadbalancerinfo


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-codedeploy.cloudformation.DeploymentGroupResource.LoadBalancerInfoProperty` or undefined


   .. py:attribute:: onPremisesInstanceTagFilters

      ``AWS::CodeDeploy::DeploymentGroup.OnPremisesInstanceTagFilters``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-codedeploy-deploymentgroup.html#cfn-codedeploy-deploymentgroup-onpremisesinstancetagfilters


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-codedeploy.cloudformation.DeploymentGroupResource.TagFilterProperty` or undefined


   .. py:attribute:: triggerConfigurations

      ``AWS::CodeDeploy::DeploymentGroup.TriggerConfigurations``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-codedeploy-deploymentgroup.html#cfn-codedeploy-deploymentgroup-triggerconfigurations


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-codedeploy.cloudformation.DeploymentGroupResource.TriggerConfigProperty` or undefined



.. py:currentmodule:: @aws-cdk/aws-codedeploy

