versions/0.8.1/_sources/refs/_aws-cdk_aws-codedeploy.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"VV16EAPQhFnV02f1EPlmDwa3NqjPxK7v3vWF2j3e4Xs="}

@aws-cdk/aws-codedeploy
=======================

.. tabs::

   .. group-tab:: Java

      View in `Maven Central <https://repo1.maven.org/maven2/software/amazon/awscdk/codedeploy/0.8.1/>`_

      **Apache Buildr**:

      .. code-block:: none

         'software.amazon.awscdk:codedeploy:jar:0.8.1'

      **Apache Ivy**:

      .. code-block:: xml

         <dependency groupId="software.amazon.awscdk" name="codedeploy" rev="0.8.1"/>

      **Apache Maven**:

      .. code-block:: xml

         <dependency>
           <groupId>software.amazon.awscdk</groupId>
           <artifactId>codedeploy</artifactId>
           <version>0.8.1</version>
         </dependency>

      **Gradle / Grails**:

      .. code-block:: none

         compile 'software.amazon.awscdk:codedeploy:0.8.1'

      **Groovy Grape**:

      .. code-block:: none

         @Grapes(
         @Grab(group='software.amazon.awscdk', module='codedeploy', version='0.8.1')
         )


   .. group-tab:: JavaScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-codedeploy/v/0.8.1>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-codedeploy@0.8.1

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-codedeploy": "^0.8.1"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-codedeploy@0.8.1


   .. group-tab:: TypeScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-codedeploy/v/0.8.1>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-codedeploy@0.8.1

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-codedeploy": "^0.8.1"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-codedeploy@0.8.1



.. mdinclude:: ./__aws-cdk_aws-codedeploy.README.md

Reference
---------

.. py:module:: @aws-cdk/aws-codedeploy


cloudformation
^^^^^^^^^^^^^^
.. py:module:: @aws-cdk/aws-codedeploy.cloudformation

ApplicationResource
~~~~~~~~~~~~~~~~~~~

.. py:class:: ApplicationResource(parent, name, [properties])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.codedeploy.cloudformation.ApplicationResource;

      .. code-tab:: javascript

         const { cloudformation.ApplicationResource } = require('@aws-cdk/aws-codedeploy');

      .. code-tab:: typescript

         import { cloudformation.ApplicationResource } from '@aws-cdk/aws-codedeploy';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``ApplicationResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``ApplicationResource``
   :type properties: :py:class:`~@aws-cdk/aws-codedeploy.cloudformation.ApplicationResourceProps` or undefined

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


ApplicationResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ApplicationResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.codedeploy.cloudformation.ApplicationResourceProps;

      .. code-tab:: javascript

         // cloudformation.ApplicationResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.ApplicationResourceProps } from '@aws-cdk/aws-codedeploy';





   .. py:attribute:: applicationName

      ``AWS::CodeDeploy::Application.ApplicationName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-codedeploy-application.html#cfn-codedeploy-application-applicationname


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: computePlatform

      ``AWS::CodeDeploy::Application.ComputePlatform``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-codedeploy-application.html#cfn-codedeploy-application-computeplatform


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


DeploymentConfigResource
~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: DeploymentConfigResource(parent, name, [properties])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.codedeploy.cloudformation.DeploymentConfigResource;

      .. code-tab:: javascript

         const { cloudformation.DeploymentConfigResource } = require('@aws-cdk/aws-codedeploy');

      .. code-tab:: typescript

         import { cloudformation.DeploymentConfigResource } from '@aws-cdk/aws-codedeploy';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``DeploymentConfigResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``DeploymentConfigResource``
   :type properties: :py:class:`~@aws-cdk/aws-codedeploy.cloudformation.DeploymentConfigResourceProps` or undefined

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*

   .. py:class:: MinimumHealthyHostsProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.codedeploy.cloudformation.DeploymentConfigResource.MinimumHealthyHostsProperty;

         .. code-tab:: javascript

            // cloudformation.DeploymentConfigResource.MinimumHealthyHostsProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.DeploymentConfigResource.MinimumHealthyHostsProperty } from '@aws-cdk/aws-codedeploy';





      .. py:attribute:: type

         ``DeploymentConfigResource.MinimumHealthyHostsProperty.Type``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentconfig-minimumhealthyhosts.html#cfn-codedeploy-deploymentconfig-minimumhealthyhosts-type


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: value

         ``DeploymentConfigResource.MinimumHealthyHostsProperty.Value``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentconfig-minimumhealthyhosts.html#cfn-codedeploy-deploymentconfig-minimumhealthyhosts-value


         :type: number or :py:class:`@aws-cdk/cdk.Token`



DeploymentConfigResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: DeploymentConfigResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.codedeploy.cloudformation.DeploymentConfigResourceProps;

      .. code-tab:: javascript

         // cloudformation.DeploymentConfigResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.DeploymentConfigResourceProps } from '@aws-cdk/aws-codedeploy';





   .. py:attribute:: deploymentConfigName

      ``AWS::CodeDeploy::DeploymentConfig.DeploymentConfigName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-codedeploy-deploymentconfig.html#cfn-codedeploy-deploymentconfig-deploymentconfigname


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: minimumHealthyHosts

      ``AWS::CodeDeploy::DeploymentConfig.MinimumHealthyHosts``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-codedeploy-deploymentconfig.html#cfn-codedeploy-deploymentconfig-minimumhealthyhosts


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-codedeploy.cloudformation.DeploymentConfigResource.MinimumHealthyHostsProperty` or undefined


DeploymentGroupResource
~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: DeploymentGroupResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.codedeploy.cloudformation.DeploymentGroupResource;

      .. code-tab:: javascript

         const { cloudformation.DeploymentGroupResource } = require('@aws-cdk/aws-codedeploy');

      .. code-tab:: typescript

         import { cloudformation.DeploymentGroupResource } from '@aws-cdk/aws-codedeploy';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``DeploymentGroupResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``DeploymentGroupResource``
   :type properties: :py:class:`~@aws-cdk/aws-codedeploy.cloudformation.DeploymentGroupResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*

   .. py:class:: AlarmConfigurationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.codedeploy.cloudformation.DeploymentGroupResource.AlarmConfigurationProperty;

         .. code-tab:: javascript

            // cloudformation.DeploymentGroupResource.AlarmConfigurationProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.DeploymentGroupResource.AlarmConfigurationProperty } from '@aws-cdk/aws-codedeploy';





      .. py:attribute:: alarms

         ``DeploymentGroupResource.AlarmConfigurationProperty.Alarms``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-alarmconfiguration.html#cfn-codedeploy-deploymentgroup-alarmconfiguration-alarms


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-codedeploy.cloudformation.DeploymentGroupResource.AlarmProperty` or undefined


      .. py:attribute:: enabled

         ``DeploymentGroupResource.AlarmConfigurationProperty.Enabled``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-alarmconfiguration.html#cfn-codedeploy-deploymentgroup-alarmconfiguration-enabled


         :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: ignorePollAlarmFailure

         ``DeploymentGroupResource.AlarmConfigurationProperty.IgnorePollAlarmFailure``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-alarmconfiguration.html#cfn-codedeploy-deploymentgroup-alarmconfiguration-ignorepollalarmfailure


         :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: AlarmProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.codedeploy.cloudformation.DeploymentGroupResource.AlarmProperty;

         .. code-tab:: javascript

            // cloudformation.DeploymentGroupResource.AlarmProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.DeploymentGroupResource.AlarmProperty } from '@aws-cdk/aws-codedeploy';





      .. py:attribute:: name

         ``DeploymentGroupResource.AlarmProperty.Name``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-alarm.html#cfn-codedeploy-deploymentgroup-alarm-name


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: AutoRollbackConfigurationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.codedeploy.cloudformation.DeploymentGroupResource.AutoRollbackConfigurationProperty;

         .. code-tab:: javascript

            // cloudformation.DeploymentGroupResource.AutoRollbackConfigurationProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.DeploymentGroupResource.AutoRollbackConfigurationProperty } from '@aws-cdk/aws-codedeploy';





      .. py:attribute:: enabled

         ``DeploymentGroupResource.AutoRollbackConfigurationProperty.Enabled``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-autorollbackconfiguration.html#cfn-codedeploy-deploymentgroup-autorollbackconfiguration-enabled


         :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: events

         ``DeploymentGroupResource.AutoRollbackConfigurationProperty.Events``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-autorollbackconfiguration.html#cfn-codedeploy-deploymentgroup-autorollbackconfiguration-events


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: DeploymentProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.codedeploy.cloudformation.DeploymentGroupResource.DeploymentProperty;

         .. code-tab:: javascript

            // cloudformation.DeploymentGroupResource.DeploymentProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.DeploymentGroupResource.DeploymentProperty } from '@aws-cdk/aws-codedeploy';





      .. py:attribute:: description

         ``DeploymentGroupResource.DeploymentProperty.Description``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-deployment.html#cfn-properties-codedeploy-deploymentgroup-deployment-description


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: ignoreApplicationStopFailures

         ``DeploymentGroupResource.DeploymentProperty.IgnoreApplicationStopFailures``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-deployment.html#cfn-properties-codedeploy-deploymentgroup-deployment-ignoreapplicationstopfailures


         :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: revision

         ``DeploymentGroupResource.DeploymentProperty.Revision``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-deployment.html#cfn-properties-codedeploy-deploymentgroup-deployment-revision


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-codedeploy.cloudformation.DeploymentGroupResource.RevisionLocationProperty`


   .. py:class:: DeploymentStyleProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.codedeploy.cloudformation.DeploymentGroupResource.DeploymentStyleProperty;

         .. code-tab:: javascript

            // cloudformation.DeploymentGroupResource.DeploymentStyleProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.DeploymentGroupResource.DeploymentStyleProperty } from '@aws-cdk/aws-codedeploy';





      .. py:attribute:: deploymentOption

         ``DeploymentGroupResource.DeploymentStyleProperty.DeploymentOption``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-deploymentstyle.html#cfn-codedeploy-deploymentgroup-deploymentstyle-deploymentoption


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: deploymentType

         ``DeploymentGroupResource.DeploymentStyleProperty.DeploymentType``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-deploymentstyle.html#cfn-codedeploy-deploymentgroup-deploymentstyle-deploymenttype


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: EC2TagFilterProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.codedeploy.cloudformation.DeploymentGroupResource.EC2TagFilterProperty;

         .. code-tab:: javascript

            // cloudformation.DeploymentGroupResource.EC2TagFilterProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.DeploymentGroupResource.EC2TagFilterProperty } from '@aws-cdk/aws-codedeploy';





      .. py:attribute:: key

         ``DeploymentGroupResource.EC2TagFilterProperty.Key``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-ec2tagfilters.html#cfn-properties-codedeploy-deploymentgroup-ec2tagfilters-key


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: type

         ``DeploymentGroupResource.EC2TagFilterProperty.Type``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-ec2tagfilters.html#cfn-properties-codedeploy-deploymentgroup-ec2tagfilters-type


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: value

         ``DeploymentGroupResource.EC2TagFilterProperty.Value``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-ec2tagfilters.html#cfn-properties-codedeploy-deploymentgroup-ec2tagfilters-value


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: ELBInfoProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.codedeploy.cloudformation.DeploymentGroupResource.ELBInfoProperty;

         .. code-tab:: javascript

            // cloudformation.DeploymentGroupResource.ELBInfoProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.DeploymentGroupResource.ELBInfoProperty } from '@aws-cdk/aws-codedeploy';





      .. py:attribute:: name

         ``DeploymentGroupResource.ELBInfoProperty.Name``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-elbinfo.html#cfn-codedeploy-deploymentgroup-elbinfo-name


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: GitHubLocationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.codedeploy.cloudformation.DeploymentGroupResource.GitHubLocationProperty;

         .. code-tab:: javascript

            // cloudformation.DeploymentGroupResource.GitHubLocationProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.DeploymentGroupResource.GitHubLocationProperty } from '@aws-cdk/aws-codedeploy';





      .. py:attribute:: commitId

         ``DeploymentGroupResource.GitHubLocationProperty.CommitId``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-deployment-revision-githublocation.html#cfn-properties-codedeploy-deploymentgroup-deployment-revision-githublocation-commitid


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: repository

         ``DeploymentGroupResource.GitHubLocationProperty.Repository``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-deployment-revision-githublocation.html#cfn-properties-codedeploy-deploymentgroup-deployment-revision-githublocation-repository


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: LoadBalancerInfoProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.codedeploy.cloudformation.DeploymentGroupResource.LoadBalancerInfoProperty;

         .. code-tab:: javascript

            // cloudformation.DeploymentGroupResource.LoadBalancerInfoProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.DeploymentGroupResource.LoadBalancerInfoProperty } from '@aws-cdk/aws-codedeploy';





      .. py:attribute:: elbInfoList

         ``DeploymentGroupResource.LoadBalancerInfoProperty.ElbInfoList``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-loadbalancerinfo.html#cfn-codedeploy-deploymentgroup-loadbalancerinfo-elbinfolist


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-codedeploy.cloudformation.DeploymentGroupResource.ELBInfoProperty` or undefined


      .. py:attribute:: targetGroupInfoList

         ``DeploymentGroupResource.LoadBalancerInfoProperty.TargetGroupInfoList``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-loadbalancerinfo.html#cfn-codedeploy-deploymentgroup-loadbalancerinfo-targetgroupinfolist


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-codedeploy.cloudformation.DeploymentGroupResource.TargetGroupInfoProperty` or undefined


   .. py:class:: RevisionLocationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.codedeploy.cloudformation.DeploymentGroupResource.RevisionLocationProperty;

         .. code-tab:: javascript

            // cloudformation.DeploymentGroupResource.RevisionLocationProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.DeploymentGroupResource.RevisionLocationProperty } from '@aws-cdk/aws-codedeploy';





      .. py:attribute:: gitHubLocation

         ``DeploymentGroupResource.RevisionLocationProperty.GitHubLocation``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-deployment-revision.html#cfn-properties-codedeploy-deploymentgroup-deployment-revision-githublocation


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-codedeploy.cloudformation.DeploymentGroupResource.GitHubLocationProperty` or undefined


      .. py:attribute:: revisionType

         ``DeploymentGroupResource.RevisionLocationProperty.RevisionType``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-deployment-revision.html#cfn-properties-codedeploy-deploymentgroup-deployment-revision-revisiontype


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: s3Location

         ``DeploymentGroupResource.RevisionLocationProperty.S3Location``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-deployment-revision.html#cfn-properties-codedeploy-deploymentgroup-deployment-revision-s3location


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-codedeploy.cloudformation.DeploymentGroupResource.S3LocationProperty` or undefined


   .. py:class:: S3LocationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.codedeploy.cloudformation.DeploymentGroupResource.S3LocationProperty;

         .. code-tab:: javascript

            // cloudformation.DeploymentGroupResource.S3LocationProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.DeploymentGroupResource.S3LocationProperty } from '@aws-cdk/aws-codedeploy';





      .. py:attribute:: bucket

         ``DeploymentGroupResource.S3LocationProperty.Bucket``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-deployment-revision-s3location.html#cfn-properties-codedeploy-deploymentgroup-deployment-revision-s3location-bucket


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: bundleType

         ``DeploymentGroupResource.S3LocationProperty.BundleType``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-deployment-revision-s3location.html#cfn-properties-codedeploy-deploymentgroup-deployment-revision-s3location-bundletype


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: eTag

         ``DeploymentGroupResource.S3LocationProperty.ETag``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-deployment-revision-s3location.html#cfn-properties-codedeploy-deploymentgroup-deployment-revision-s3location-etag


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: key

         ``DeploymentGroupResource.S3LocationProperty.Key``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-deployment-revision-s3location.html#cfn-properties-codedeploy-deploymentgroup-deployment-revision-s3location-key


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: version

         ``DeploymentGroupResource.S3LocationProperty.Version``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-deployment-revision-s3location.html#cfn-properties-codedeploy-deploymentgroup-deployment-revision-s3location-value


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: TagFilterProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.codedeploy.cloudformation.DeploymentGroupResource.TagFilterProperty;

         .. code-tab:: javascript

            // cloudformation.DeploymentGroupResource.TagFilterProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.DeploymentGroupResource.TagFilterProperty } from '@aws-cdk/aws-codedeploy';





      .. py:attribute:: key

         ``DeploymentGroupResource.TagFilterProperty.Key``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-onpremisesinstancetagfilters.html#cfn-properties-codedeploy-deploymentgroup-onpremisesinstancetagfilters-key


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: type

         ``DeploymentGroupResource.TagFilterProperty.Type``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-onpremisesinstancetagfilters.html#cfn-properties-codedeploy-deploymentgroup-onpremisesinstancetagfilters-type


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: value

         ``DeploymentGroupResource.TagFilterProperty.Value``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-onpremisesinstancetagfilters.html#cfn-properties-codedeploy-deploymentgroup-onpremisesinstancetagfilters-value


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: TargetGroupInfoProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.codedeploy.cloudformation.DeploymentGroupResource.TargetGroupInfoProperty;

         .. code-tab:: javascript

            // cloudformation.DeploymentGroupResource.TargetGroupInfoProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.DeploymentGroupResource.TargetGroupInfoProperty } from '@aws-cdk/aws-codedeploy';





      .. py:attribute:: name

         ``DeploymentGroupResource.TargetGroupInfoProperty.Name``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-targetgroupinfo.html#cfn-codedeploy-deploymentgroup-targetgroupinfo-name


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: TriggerConfigProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.codedeploy.cloudformation.DeploymentGroupResource.TriggerConfigProperty;

         .. code-tab:: javascript

            // cloudformation.DeploymentGroupResource.TriggerConfigProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.DeploymentGroupResource.TriggerConfigProperty } from '@aws-cdk/aws-codedeploy';





      .. py:attribute:: triggerEvents

         ``DeploymentGroupResource.TriggerConfigProperty.TriggerEvents``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-triggerconfig.html#cfn-codedeploy-deploymentgroup-triggerconfig-triggerevents


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: triggerName

         ``DeploymentGroupResource.TriggerConfigProperty.TriggerName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-triggerconfig.html#cfn-codedeploy-deploymentgroup-triggerconfig-triggername


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: triggerTargetArn

         ``DeploymentGroupResource.TriggerConfigProperty.TriggerTargetArn``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-triggerconfig.html#cfn-codedeploy-deploymentgroup-triggerconfig-triggertargetarn


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined



DeploymentGroupResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: DeploymentGroupResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.codedeploy.cloudformation.DeploymentGroupResourceProps;

      .. code-tab:: javascript

         // cloudformation.DeploymentGroupResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.DeploymentGroupResourceProps } from '@aws-cdk/aws-codedeploy';





   .. py:attribute:: applicationName

      ``AWS::CodeDeploy::DeploymentGroup.ApplicationName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-codedeploy-deploymentgroup.html#cfn-codedeploy-deploymentgroup-applicationname


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: serviceRoleArn

      ``AWS::CodeDeploy::DeploymentGroup.ServiceRoleArn``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-codedeploy-deploymentgroup.html#cfn-codedeploy-deploymentgroup-servicerolearn


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: alarmConfiguration

      ``AWS::CodeDeploy::DeploymentGroup.AlarmConfiguration``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-codedeploy-deploymentgroup.html#cfn-codedeploy-deploymentgroup-alarmconfiguration


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-codedeploy.cloudformation.DeploymentGroupResource.AlarmConfigurationProperty` or undefined


   .. py:attribute:: autoRollbackConfiguration

      ``AWS::CodeDeploy::DeploymentGroup.AutoRollbackConfiguration``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-codedeploy-deploymentgroup.html#cfn-codedeploy-deploymentgroup-autorollbackconfiguration


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-codedeploy.cloudformation.DeploymentGroupResource.AutoRollbackConfigurationProperty` or undefined


   .. py:attribute:: autoScalingGroups

      ``AWS::CodeDeploy::DeploymentGroup.AutoScalingGroups``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-codedeploy-deploymentgroup.html#cfn-codedeploy-deploymentgroup-autoscalinggroups


      :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: deployment

      ``AWS::CodeDeploy::DeploymentGroup.Deployment``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-codedeploy-deploymentgroup.html#cfn-codedeploy-deploymentgroup-deployment


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-codedeploy.cloudformation.DeploymentGroupResource.DeploymentProperty` or undefined


   .. py:attribute:: deploymentConfigName

      ``AWS::CodeDeploy::DeploymentGroup.DeploymentConfigName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-codedeploy-deploymentgroup.html#cfn-codedeploy-deploymentgroup-deploymentconfigname


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: deploymentGroupName

      ``AWS::CodeDeploy::DeploymentGroup.DeploymentGroupName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-codedeploy-deploymentgroup.html#cfn-codedeploy-deploymentgroup-deploymentgroupname


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: deploymentStyle

      ``AWS::CodeDeploy::DeploymentGroup.DeploymentStyle``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-codedeploy-deploymentgroup.html#cfn-codedeploy-deploymentgroup-deploymentstyle


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-codedeploy.cloudformation.DeploymentGroupResource.DeploymentStyleProperty` or undefined


   .. py:attribute:: ec2TagFilters

      ``AWS::CodeDeploy::DeploymentGroup.Ec2TagFilters``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-codedeploy-deploymentgroup.html#cfn-codedeploy-deploymentgroup-ec2tagfilters


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-codedeploy.cloudformation.DeploymentGroupResource.EC2TagFilterProperty` or undefined


   .. py:attribute:: loadBalancerInfo

      ``AWS::CodeDeploy::DeploymentGroup.LoadBalancerInfo``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-codedeploy-deploymentgroup.html#cfn-codedeploy-deploymentgroup-loadbalancerinfo


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-codedeploy.cloudformation.DeploymentGroupResource.LoadBalancerInfoProperty` or undefined


   .. py:attribute:: onPremisesInstanceTagFilters

      ``AWS::CodeDeploy::DeploymentGroup.OnPremisesInstanceTagFilters``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-codedeploy-deploymentgroup.html#cfn-codedeploy-deploymentgroup-onpremisesinstancetagfilters


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-codedeploy.cloudformation.DeploymentGroupResource.TagFilterProperty` or undefined


   .. py:attribute:: triggerConfigurations

      ``AWS::CodeDeploy::DeploymentGroup.TriggerConfigurations``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-codedeploy-deploymentgroup.html#cfn-codedeploy-deploymentgroup-triggerconfigurations


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-codedeploy.cloudformation.DeploymentGroupResource.TriggerConfigProperty` or undefined



.. py:currentmodule:: @aws-cdk/aws-codedeploy

